--- a/package.json
+++ b/package.json
@@ -10,10 +10,17 @@
   "author": "nfactorial",
   "license": "ISC",
   "devDependencies": {
-    "@nfactorial/webgl_helper": "0.0.5",
     "eslint": "^5.3.0",
     "eslint-config-airbnb": "^17.0.0",
     "eslint-plugin-import": "^2.13.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@nfactorial/webgl_helper": "0.0.8",
+    "gl-mat3": "^2.0.0",
+    "gl-mat4": "^1.2.0",
+    "gl-quat": "^1.0.0",
+    "gl-vec2": "^1.3.0",
+    "gl-vec3": "^1.1.3",
+    "gl-vec4": "^1.0.1"
+  }
 }
